	
	FIM NEWS -- history of main user-visible changes in FIM.

                Version 0.6-trunk

# (r1727)
 * man fimrc: added a section with default aliases,
# (r1724)
 * If possible, use 'timeout' in 'make tests'.
# (r1718-r1720,r1726)
 * Switch -K aka --chars-press <chars> simulates input of characters at startup.
# (r1709,r1710)
 * Fix: Slideshow function (e.g. `fim --slideshow=5 media/`) will now cycle forever, unless --once/-1 option specified (as in fbi).
# (r1707,r1711)
 * Fix: after 'quit' no command shall execute anymore (unless in -F).
# (r1705)
 * With SDL one can specify window size as percentage of allowed size (-o sdl=w55%).
# (r1700)
 * With SDL (-o sdl), center window by default.
# (r1693)
 * fix: pressing keys "1n1n" will not execute 'n' 11 times but twice.
# (r1689)
 * configure --enable-debug is developer option now.
# (r1679-r1688,r1721-r1722)
 * libcaca (-o caca) mode is working again, with limitations.
# (r1677,r1678,r1725)
 * Slideshow function (e.g `fim --slideshow=5 *.jpg`) now more responsive.
# (r1662)
 * Arrow keys are now working in aalib (-o aa).
# (r1649)
 * Bugfix with aalib (-o aa): don't truncate long lines.
# (r1641)
 * Avoid leak in language parser.
# (r1644-r1646)
 * Avoid console buffer memory corruption.
# (r1626)
 * Eliminate a memory leak from file loading code. 
# (r1625,r1637,r1657,r1658,r1661,r1665,r1666)
 * Eliminate memory leaks in PNG, JPG, TIFF, EXIF, and font decoding code.
# (r1624,r1650)
 * fix possibly broken `make -j` in rebuilding fimgs.man and fimrc.man.
# (r1623)
 * correct configure script check for regcomp() -- could lead to false negatives.
# (r1621)
 * Don't break build on missing 'gs'.
# (r1616,r1659,r1660,r1667)
 * Using --load-shadow-dir <dir> adds a shadow directory (experimental).
   Then 'scale "shadow"' (bound to key '"') will substitute the current displayed image with that 
   of the first same-named file located under a shadow directory.
# (r1615)